##Text encoding: utf-8

2008-08-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* autogen.sh: use versioned help files.
	* docs/help/3d/Makefile.am: ditto.
	* docs/help/3d/gchem3d-viewer-unstable.omf.in: ditto.
	* docs/help/3d/gchem3d-viewer.omf.in: ditto.
	* docs/help/Makefile.am: ditto.
	* docs/help/calc/Makefile.am: ditto.
	* docs/help/calc/gchemcalc-unstable.omf.in: ditto.
	* docs/help/crystal/Makefile.am: ditto.
	* docs/help/crystal/gcrystal-unstable.omf.in: ditto.
	* docs/help/table/Makefile.am: ditto.
	* docs/help/table/gchemtable-unstable.omf.in: ditto.

2008-08-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/tool.h: API documentation work.
	* libs/gcp/view.h: ditto.
	* libs/gcu/spectrumdoc.cc: more work on X variables switch and fix an
	nmr integration issue.
	* libs/gcu/spectrumdoc.h: ditto.

2008-08-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment-residue.h: API documentation work.
	* libs/gcp/tool.h: ditto.
	* libs/gcu/spectrumdoc.cc: allow invertion of X axis and Y variable
	selection (switch between absorbance and transmittance ).
	* libs/gcu/spectrumdoc.h: ditto.
	* libs/gcu/spectrumview.cc: ditto.
	* libs/gcu/spectrumview.h: ditto.

2008-08-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.h: API documentation work.
	* libs/gcp/bond.h: ditto.
	* libs/gcp/docprop.h: ditto.
	* libs/gcp/document.h: ditto.
	* libs/gcp/electron.h: ditto.
	* libs/gcp/fontsel.h: ditto.
	* libs/gcp/fragment-atom.h: ditto.
	* libs/gcp/fragment-residue.h: ditto.
	* libs/gcp/mesomer.h: ditto.
	* libs/gcp/mesomery-arrow.h: ditto.
	* libs/gcp/mesomery.h: ditto.
	* libs/gcp/molecule.h: ditto.
	* libs/gcp/operation.h: ditto.
	* libs/gcu/atom.cc: fixed Id setting.
	* libs/gcu/molecule.cc: fixed a bug in Molecule::MoleculeFromFormula.
	* libs/gcu/object.h: ifxed typo in API documentation.
	* libs/gcu/spectrumdoc.cc: inhibit FID transform, but fixed ppm origin
	using a Brücker specific field.
	* libs/gcu/spectrumdoc.h: ditto.