@@ -1,0 +1,10 @@
+MAINTAINERCLEANFILES = Makefile.in
+
+include $(top_srcdir)/gnome-doc-utils.make
+dist-hook: doc-dist-hook
+
+DOC_MODULE = gspectrum-@GCU_API_VER@
+DOC_ENTITIES = legal.xml
+DOC_INCLUDES = 
+
+DOC_LINGUAS =
