@@ -1,0 +1,10 @@
+<?xml version="1.0" standalone="no"?>
+<omf>
+  <resource>
+    <subject category="Applications|Education|Science"/>
+    <type>manual</type>
+    <relation seriesid="3979cd97-dbc5-45df-a1bc-5cafb3b7a6e4"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Jean Bréfort"/>
+    <rights type="GNU GPL" license.version="2" holder="Jean Bréfort"/>
+  </resource>        
+</omf>
